Implemented omniauth, cleaned up project. I think this is ready to share with the world.

--- a/config/database.yml
+++ b/config/database.yml
@@ -14,11 +14,17 @@ test:
   database: db/test.sqlite3
   pool: 5
   timeout: 5000
-
+  
 production:
-    adapter: mysql2
-    encoding: utf8
-    database: ratemycommit
-    username: 
-    password: 
-    host: localhost
+  adapter: sqlite3
+  database: db/production.sqlite3
+  pool: 5
+  timeout: 5000
+
+#production:
+#    adapter: mysql2
+#    encoding: utf8
+#    database: railsrx
+#    username: 
+#    password: 
+#    host: localhost
